# QuantPDE

./: CITATION.cff  CMakeLists.txt  Core  Doxyfile  Doxygen.bib  FindJsonCpp.cmake  LICENSE  Makefile  Makefile.backup  README.md  TODO.txt
Modules/Constraints/: BlackScholesEquation
Modules/Derivatives/: Vanilla
Modules/Solvers/: European
QuantPDE/: Core
QuantPDE/Modules/: Configuration  HJBQVI  Lambdas  Operators  Payoffs  Utilities
QuantPDE/src/Bindings/: AssertUnbound.hpp  Eigen  Eigen.hpp
QuantPDE/src/Core/: Axis.hpp  BDF.hpp  CrankNicolson.hpp  DateTime.hpp  Domain.hpp  EarlyInclude.hpp  Event.hpp  Function.hpp  Grid.hpp  Impulse.hpp  Integral.hpp  Interpolant.hpp  IterativeMethod.hpp  LinearBDF.hpp  LinearSystemSum.hpp  Macros.hpp  Map.hpp  Metafunctions.hpp  NonlinearIteration.hpp  Operator.hpp  PenaltyMethod.hpp  PolicyIteration.hpp  ProbabilityDistribution.hpp  Problem.hpp  Rannacher.hpp  Results.hpp  Solver.hpp  Stepper.hpp  Types.hpp  Wrapper.hpp
QuantPDE/src/Modules/: BlackScholes.hpp  BlackScholesEquation.hpp  BlackScholesOperator.hpp  EuropeanOption.hpp  ImplicitEuropeanSolver.hpp  Payoffs.hpp
QuantPDE/src/Modules/Configuration/: Configuration.hpp
QuantPDE/src/Modules/HJBQVI/: HJBQVI.hpp
QuantPDE/src/Modules/Lambdas/: Densities.hpp  Payoffs.hpp
QuantPDE/src/Modules/Operators/: BlackScholes.hpp
QuantPDE/src/Modules/Payoffs/: Vanilla.hpp
QuantPDE/src/Modules/Utilities/: Configuration.hpp  Results.hpp
Source/: Axis.hpp  DateTime.hpp  Function.hpp  Grid.hpp  Metafunctions.hpp  Operator.hpp  Problem.hpp  Solver.hpp  Stepper.hpp  Types.hpp
Tests/: ConvergenceTableEuropean.cpp
bindings/: Eigen
examples/: CMakeLists.txt  black_scholes.cpp  convergence_table.cpp  fex_rate.cpp  gmwb.cpp  jump_diffusion.cpp  optimal_consumption.cpp  stock_loan.cpp  tutorial.cpp  unequal_borrowing_lending_rates.cpp  vanilla_options.cpp
examples/experimental/: CMakeLists.txt  glwb.cpp  stock_loan.cpp
examples/hjbqvi/: CMakeLists.txt  exchange_rate.cpp  gmwb.cpp  optimal_consumption.cpp
modules/: European  European.hpp  Payoffs.hpp
src/: Axis.hpp  DateTime.hpp  Event.hpp  Function.hpp  Grid.hpp  Metafunctions.hpp  Problem.hpp  Solver.hpp  Stepper.hpp  Types.hpp
test/: Makefile  bermudan_put.cpp  black_scholes.cpp  convergence_table.cpp  european_convergence_table.cpp  fex_rate.cpp  gmwb.bak  gmwb.cpp  gmwb.hpp  gmwb_explicit.cpp  gmwb_old.cpp  guaranteed_minimum_withdrawal_benefits.cpp  guaranteed_minimum_withdrawal_benefits_explicit.cpp  jump_diffusion.cpp  nonrecourse_loan.cpp  nonrecourse_stock_loan.cpp  optimal_consumption.cpp  tutorial.cpp  unequal_borrowing_lending_rates.cpp  vanilla_convergence_table.cpp
test/experimental/: fex_rate.cpp  fex_rate.m  gmwb.cpp  hjbqvi.cpp  hjbqvi.hpp  nonrecourse_stock_loan.cpp  optimal_consumption.cpp  stock_loan.cpp
test/experimental/backup/: gmwb.cpp
test/scripts/: nonrecourse_stock_loan
tests/: ConvergenceTableEuropean.cpp  Makefile
