PROJECT(QUANT_PDE)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.2)

# C++11
SET(CMAKE_CXX_STANDARD 11)

# Eigen
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

# QuantPDE
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

# Set appropriate optimization flags
# Use `cmake -D CMAKE_BUILT_TYPE=DEBUG`
SET(CMAKE_BUILD_TYPE Release)

# Where to output binaries
SET(PROJECT_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_SUBDIRECTORY(examples)

# Documentation
FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
	ADD_CUSTOM_TARGET(doc ${DOXYGEN_EXECUTABLE}
			${PROJECT_SOURCE_DIR}/Doxyfile
			COMMENT "Generating API documentation with Doxygen"
			VERBATIM)
ENDIF(DOXYGEN_FOUND)
